--- a/config/css/style.css
+++ b/config/css/style.css
@@ -82,7 +82,6 @@ body {
 	border-right: 1px solid #EFEFEF;
 	border-bottom: 1px solid #E2E2E2;
 	box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.04);
-	transition: padding 500ms ease 0s;
 }
 
 .fixed {  /* To fix main menu container */
@@ -94,7 +93,11 @@ body {
     width: 100%;
 	margin: 0px 0px !important;
 	border-bottom: 4px solid #b2ebf2 !important;
-	transition: padding 500ms ease 0s !important;
+	transition: all 0.4s ease;
+	 -webkit-transition: all 0.4s ease;
+	  -moz-transition: all 0.4s ease;
+	  -o-transition: all 0.4s ease;
+	  transition: all 0.4s ease;
 }
 
 #profil {
@@ -454,13 +457,4 @@ body.popup2 {
 body.popup table th,
 body.popup table td {
 	padding:5px 10px;
-}
-
-.fixed{  /* To fix main menu container */
-    z-index: 9999;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    transition: all 0.1s ease 0s;
 }
